--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/styles.css">
+    <link rel="stylesheet" href="/archivos_CSS/styles.css">
 </head>
 
 <body>
@@ -89,7 +89,7 @@
 
         <!-- formulario pagina contact -->
         <div class="container_p d-flex justify-content-center align-items-center">
-            <div class="container_h d-flex justify-content-center align-items-center rounded bg-dark-subtle">
+            <div class="container_h d-flex justify-content-center align-items-center bg-white">
                 <form action="index.html" method="get">
                     <fieldset>
                         <div class="mb-3">
@@ -115,7 +115,7 @@
     </main>
     <footer class="footer bg-dark bg-gradient">
         <div class="fpadre row align-items-center">
-            <div class="fhijo col-9">
+            <div class="fhijo col-5">
                 <a class="red_social" href="https://www.facebook.com/profile.php?id=61557393724458">
                     <img src="/images/facebook.png" alt="facebook">
                 </a>
@@ -126,7 +126,7 @@
                     <img src="/images/whatsapp.png" alt="whatsapp">
                 </a>
             </div>
-            <div class="col-3 justify-content-center mt-3">
+            <div class="col cohort mt-3">
                 <p class="text-light">COHORT: Jheesfri Cardona Hernandez</p>
             </div>
         </div>
