--- a/details.html
+++ b/details.html
@@ -8,7 +8,7 @@
     <title>Details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/styles.css">
+    <link rel="stylesheet" href="/archivos_CSS/styles.css">
 </head>
 
 <body>
@@ -44,7 +44,8 @@
         </nav>
     </header>
     <main class="d-flex justify-content-center">
-        <div class="card my-5 d-flex flex-direction-column justify-content-center align-items-center bg-dark-subtle cont_p_details" style="max-width: 80%;">
+        <div class="card my-5 d-flex flex-direction-column justify-content-center align-items-center cont_p_details"
+            style="max-width: 80%;">
             <div class="row g-0 d-flex justify-content-evenly container_h_details">
                 <div class="col-6 -md-4 cont_n_1_details">
                     <img src="/images/outing_to_the_museum.jpg" class="img-fluid rounded-start" alt="Museum">
@@ -52,7 +53,12 @@
                 <div class="col-6 bg-white -md-8 cont_n_2_details">
                     <div class="card-body">
                         <h5 class="card-title mb-2">Museum</h5>
-                        <p class="card-text">“A museum is a non-profit, permanent institution at the service of society, which researches, collects, conserves, interprets and exhibits material and intangible heritage. Open to the public, accessible and inclusive, museums promote diversity and sustainability. With the participation of communities, museums operate and communicate ethically and professionally, offering varied experiences for education, enjoyment, reflection and the exchange of knowledge.”</p>
+                        <p class="card-text">“A museum is a non-profit, permanent institution at the service of society,
+                            which researches, collects, conserves, interprets and exhibits material and intangible
+                            heritage. Open to the public, accessible and inclusive, museums promote diversity and
+                            sustainability. With the participation of communities, museums operate and communicate
+                            ethically and professionally, offering varied experiences for education, enjoyment,
+                            reflection and the exchange of knowledge.”</p>
                         <p class="card-text">The museum is located in New York.</p>
                         <p class="card-text"><small class="text-body-secondary">Price: $ 2000</small></p>
                     </div>
@@ -62,7 +68,7 @@
     </main>
     <footer class="footer bg-dark bg-gradient">
         <div class="fpadre row align-items-center">
-            <div class="fhijo col-9">
+            <div class="fhijo col-5">
                 <a class="red_social" href="https://www.facebook.com/profile.php?id=61557393724458">
                     <img src="/images/facebook.png" alt="facebook">
                 </a>
@@ -73,7 +79,7 @@
                     <img src="/images/whatsapp.png" alt="whatsapp">
                 </a>
             </div>
-            <div class="col-3 justify-content-center mt-3">
+            <div class="col cohort mt-3">
                 <p class="text-light">COHORT: Jheesfri Cardona Hernandez</p>
             </div>
         </div>
