--- a/past_events.html
+++ b/past_events.html
@@ -8,7 +8,7 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/styles.css">
+    <link rel="stylesheet" href="/archivos_CSS/styles.css">
 </head>
 
 <body>
@@ -91,22 +91,30 @@
 
         <div class="row row_padre justify-content-evenly align-items-center">
             <div class="row">
-                <div class="col-9">
-                    <form action="/data.html" method="get" id="formulario">
-                        <input class="btn_checkbox" type="checkbox" id="categoria_1" name="cat1">
-                        <label for="categoria_1">Category 1</label>
-                        <input class="btn_checkbox" type="checkbox" id="categoria_2" name="cat2">
-                        <label for="categoria_2">Category 2</label>
-                        <input class="btn_checkbox" type="checkbox" id="categoria_3" name="cat3">
-                        <label for="categoria_3">Category 3</label>
-                        <input class="btn_checkbox" type="checkbox" id="categoria_4" name="cat4">
-                        <label for="categoria_4">Category 4</label>
-                        <input class="btn_checkbox" type="checkbox" id="categoria_5" name="cat5">
-                        <label for="categoria_5">Category 5</label>
-                    </form>
+                <div class="col-9 d-flex flex-wrap">
+                        <div class="input-group-text">
+                            <input class="btn_checkbox" type="checkbox" id="categoria_1" name="cat1">
+                            <label for="categoria_1">Category 1</label>
+                        </div>
+                        <div class="input-group-text">
+                            <input class="btn_checkbox" type="checkbox" id="categoria_2" name="cat2">
+                            <label for="categoria_2">Category 2</label>
+                        </div>
+                        <div class="input-group-text">
+                            <input class="btn_checkbox" type="checkbox" id="categoria_3" name="cat3">
+                            <label for="categoria_3">Category 3</label>
+                        </div>
+                        <div class="input-group-text">
+                            <input class="btn_checkbox" type="checkbox" id="categoria_4" name="cat4">
+                            <label for="categoria_4">Category 4</label>
+                        </div>
+                        <div class="input-group-text">
+                            <input class="btn_checkbox" type="checkbox" id="categoria_5" name="cat5">
+                            <label for="categoria_5">Category 5</label>
+                        </div>
                 </div>
-                <div class="col d-flex justify-content-center">
-                    <input class="barra_busq" type="text" placeholder="Search">
+                <div class="col d-flex justify-content-center align-items-center">
+                    <input class="barra_busq" type="text" placeholder="   Search">
                     <button class="btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-search" viewBox="0 0 16 16">
@@ -118,20 +126,8 @@
             </div>
         </div>
         <!-- tarjetas o card de detalles de events -->
-        <div class=" container-xxl d-flex justify-content-evenly align-items-start my-5" id="cont_cards">
-            <div class="card" style="width: 18rem;">
-                <img src="/images/outing_to_the_museum.jpg" class="card-img-top" alt="museum">
-                <div class="card-body ">
-                    <h5 class="card-title">Museum</h5>
-                    <p class="card-text">A museum is a non-profit, permanent institution at the service of society, which researches, collects, conserves, interprets and exhibits material and intangible heritage.
-                        card's content.</p>
-                    <div class="row">
-                        <p class="col-6 d-flex justify-content-center my-2 ">$ 2000</p>
-                        <a href="/details.html" class=" col-6 btn btn-primary">Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
+        <div class="row d-flex justify-content-evenly align-items-start my-2" id="cont_cards">
+            <!-- <div class="card" style="width: 18rem;">
                 <img src="/images/outing_to_the_museum.jpg" class="card-img-top" alt="museum">
                 <div class="card-body">
                     <h5 class="card-title">Museum</h5>
@@ -142,47 +138,23 @@
                         <a href="/details.html" class=" col-6 btn btn-primary">Details</a>
                     </div>
                 </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="/images/outing_to_the_museum.jpg" class="card-img-top" alt="museum">
-                <div class="card-body">
-                    <h5 class="card-title">Museum</h5>
-                    <p class="card-text">A museum is a non-profit, permanent institution at the service of society, which researches, collects, conserves, interprets and exhibits material and intangible heritage.
-                        card's content.</p>
-                    <div class="row">
-                        <p class="col-6 d-flex justify-content-center my-2 ">$ 2000</p>
-                        <a href="/details.html" class=" col-6 btn btn-primary">Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="/images/outing_to_the_museum.jpg" class="card-img-top" alt="museum">
-                <div class="card-body">
-                    <h5 class="card-title">Museum</h5>
-                    <p class="card-text">A museum is a non-profit, permanent institution at the service of society, which researches, collects, conserves, interprets and exhibits material and intangible heritage.
-                        card's content.</p>
-                    <div class="row">
-                        <p class="col-6 d-inline-flex">$ 2000</p>
-                        <a href="/details.html" class=" col-6 btn btn-primary">Details</a>
-                    </div>
-                </div>
-            </div>
+            </div> -->
         </div>
     </main>
     <footer class="footer bg-dark bg-gradient">
        <div class="fpadre row  align-items-center">
-        <div class="fhijo col-9">
+        <div class="fhijo col-5">
             <a class="red_social" href="https://www.facebook.com/profile.php?id=61557393724458">
                 <img src="/images/facebook.png" alt="facebook">
             </a>
             <a class="red_social" href="">
                 <img src="/images/instagram.png" alt="instagram">
             </a>
-            <a class="red_social fhijo" href="https://wa.me/+573333333333">
+            <a class="red_social" href="https://wa.me/+573333333333">
                 <img src="/images/whatsapp.png" alt="whatsapp">
             </a>
         </div>
-        <div class="col-3 justify-content-center mt-3">
+        <div class="col cohort mt-3">
             <p class="text-light">COHORT: Jheesfri Cardona Hernandez</p>
         </div>
        </div>
@@ -190,6 +162,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+        <script src="../archivos_JS/past_events.js"></script>
 </body>
 
 </html>
