--- a/stast.html
+++ b/stast.html
@@ -8,7 +8,7 @@
     <title>Details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/styles.css">
+    <link rel="stylesheet" href="/archivos_CSS/styles.css">
 </head>
 
 <body>
@@ -159,7 +159,7 @@
     </main>
     <footer class="footer bg-dark bg-gradient">
         <div class="fpadre row align-items-center">
-            <div class="fhijo col-8"> 
+            <div class="fhijo col-5"> 
                 <a class="red_social" href="https://www.facebook.com/profile.php?id=61557393724458">
                     <img src="/images/facebook.png" alt="facebook">
                 </a>
@@ -170,7 +170,7 @@
                     <img src="/images/whatsapp.png" alt="whatsapp">
                 </a>
             </div>
-            <div class="col-4 mt-3">
+            <div class="col cohort mt-3">
                 <div class="d-flex justify-content-end">
                     <p class="text-light">COHORT: Jheesfri Cardona Hernandez</p>
                 </div>
