agregue el linck de intagram al ancor a todos los html

--- a/past_events.html
+++ b/past_events.html
@@ -147,7 +147,7 @@
             <a class="red_social" href="https://www.facebook.com/profile.php?id=61557393724458">
                 <img src="/images/facebook.png" alt="facebook">
             </a>
-            <a class="red_social" href="">
+            <a class="red_social" href="https://www.instagram.com">
                 <img src="/images/instagram.png" alt="instagram">
             </a>
             <a class="red_social" href="https://wa.me/+573333333333">
