de ahora en adelante las llamare por versiones y esta sera la version 1 tengo todo el backend funcionando 100% y me falta un poco de estilos y las demas paginas past event y upcoming por hacer el backend

--- a/details.html
+++ b/details.html
@@ -44,9 +44,8 @@
         </nav>
     </header>
     <main class="d-flex justify-content-center">
-        <div class="card my-5 d-flex flex-direction-column justify-content-center align-items-center cont_p_details"
-            style="max-width: 80%;">
-            <div class="row g-0 d-flex justify-content-evenly container_h_details">
+        <div id="contenedorPDetails" class="card my-5 d-flex flex-direction-column justify-content-center align-items-center cont_p_details" style="max-width: 80%;">
+            <!-- <div class="row g-0 d-flex justify-content-evenly container_h_details">
                 <div class="col-6 -md-4 cont_n_1_details">
                     <img src="/images/outing_to_the_museum.jpg" class="img-fluid rounded-start" alt="Museum">
                 </div>
@@ -63,7 +62,7 @@
                         <p class="card-text"><small class="text-body-secondary">Price: $ 2000</small></p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </main>
     <footer class="footer bg-dark bg-gradient">
@@ -84,9 +83,11 @@
             </div>
         </div>
     </footer>
+    <script src="/archivos_JS/details.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
 
 </html>
+
