--- a/index.html
+++ b/index.html
@@ -88,14 +88,11 @@
 
         <!-- selector de categorias y barra de busquedad -->
 
-        <div class="row row_padre justify-content-evenly align-items-center">
-            <div class="row">
+        <div class="d-flex flex-wrap">
+            <div class="row row_padre justify-content-evenly align-items-center flex-wrap">
+
                 <div class="col-9 d-flex flex-wrap" id="contenedorInputs">
-                        <!-- <div class="input-group-text">
-                            <input class="btn_checkbox" type="checkbox" id="categoria_1" name="cat1">
-                            <label for="categoria_1">Category 1</label>
-                        </div> -->
-                       
+                    <!-- AQUI VA EL DOM DE JAVASCRIPT -->
                 </div>
                 <div class="col d-flex justify-content-center align-items-center">
                     <input class="barra_busq" type="text" placeholder="   Search" id="inputText">
@@ -107,11 +104,12 @@
                         </svg>
                     </button>
                 </div>
-            </div>
-        </div>
-        <!-- tarjetas o card de detalles de events -->
-        <div class="row d-flex justify-content-evenly my-2 " id="cont_cards">
 
+            </div>
+            <!-- tarjetas o card de detalles de events -->
+            <div class="d-flex justify-content-evenly flex-wrap flex-wrap my-2 " id="cont_cards">
+
+            </div>
         </div>
 
     </main>
