--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -91,31 +91,11 @@
 
         <div class="row row_padre justify-content-evenly align-items-center">
             <div class="row">
-                <div class="col-9 d-flex flex-wrap">
-                    <div class="input-group-text">
-                        <input class="btn_checkbox" type="checkbox" id="categoria_1" name="cat1">
-                        <label for="categoria_1">Category 1</label>
-                    </div>
-                    <div class="input-group-text">
-                        <input class="btn_checkbox" type="checkbox" id="categoria_2" name="cat2">
-                        <label for="categoria_2">Category 2</label>
-                    </div>
-                    <div class="input-group-text">
-                        <input class="btn_checkbox" type="checkbox" id="categoria_3" name="cat3">
-                        <label for="categoria_3">Category 3</label>
-                    </div>
-                    <div class="input-group-text">
-                        <input class="btn_checkbox" type="checkbox" id="categoria_4" name="cat4">
-                        <label for="categoria_4">Category 4</label>
-                    </div>
-                    <div class="input-group-text">
-                        <input class="btn_checkbox" type="checkbox" id="categoria_5" name="cat5">
-                        <label for="categoria_5">Category 5</label>
-                    </div>
-
+                <div id="contenedorInputs" class="col-9 d-flex flex-wrap">
+                    
                 </div>
                 <div class="col d-flex justify-content-center align-items-center">
-                    <input class="barra_busq" type="text" placeholder="   Search">
+                    <input id="inputText" class="barra_busq" type="text" placeholder="   Search">
                     <button class="btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-search" viewBox="0 0 16 16">
