--- a/past_events.html
+++ b/past_events.html
@@ -91,30 +91,11 @@
 
         <div class="row row_padre justify-content-evenly align-items-center">
             <div class="row">
-                <div class="col-9 d-flex flex-wrap">
-                        <div class="input-group-text">
-                            <input class="btn_checkbox" type="checkbox" id="categoria_1" name="cat1">
-                            <label for="categoria_1">Category 1</label>
-                        </div>
-                        <div class="input-group-text">
-                            <input class="btn_checkbox" type="checkbox" id="categoria_2" name="cat2">
-                            <label for="categoria_2">Category 2</label>
-                        </div>
-                        <div class="input-group-text">
-                            <input class="btn_checkbox" type="checkbox" id="categoria_3" name="cat3">
-                            <label for="categoria_3">Category 3</label>
-                        </div>
-                        <div class="input-group-text">
-                            <input class="btn_checkbox" type="checkbox" id="categoria_4" name="cat4">
-                            <label for="categoria_4">Category 4</label>
-                        </div>
-                        <div class="input-group-text">
-                            <input class="btn_checkbox" type="checkbox" id="categoria_5" name="cat5">
-                            <label for="categoria_5">Category 5</label>
-                        </div>
+                <div id="contenedorInputs" class="col-9 d-flex flex-wrap">
+                    
                 </div>
                 <div class="col d-flex justify-content-center align-items-center">
-                    <input class="barra_busq" type="text" placeholder="   Search">
+                    <input id="inputText" class="barra_busq" type="text" placeholder="   Search">
                     <button class="btn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-search" viewBox="0 0 16 16">
@@ -142,27 +123,27 @@
         </div>
     </main>
     <footer class="footer bg-dark bg-gradient">
-       <div class="fpadre row  align-items-center">
-        <div class="fhijo col-5">
-            <a class="red_social" href="https://www.facebook.com/profile.php?id=61557393724458">
-                <img src="/images/facebook.png" alt="facebook">
-            </a>
-            <a class="red_social" href="https://www.instagram.com">
-                <img src="/images/instagram.png" alt="instagram">
-            </a>
-            <a class="red_social" href="https://wa.me/+573333333333">
-                <img src="/images/whatsapp.png" alt="whatsapp">
-            </a>
+        <div class="fpadre row  align-items-center">
+            <div class="fhijo col-5">
+                <a class="red_social" href="https://www.facebook.com/profile.php?id=61557393724458">
+                    <img src="/images/facebook.png" alt="facebook">
+                </a>
+                <a class="red_social" href="https://www.instagram.com">
+                    <img src="/images/instagram.png" alt="instagram">
+                </a>
+                <a class="red_social" href="https://wa.me/+573333333333">
+                    <img src="/images/whatsapp.png" alt="whatsapp">
+                </a>
+            </div>
+            <div class="col cohort mt-3">
+                <p class="text-light">COHORT: Jheesfri Cardona Hernandez</p>
+            </div>
         </div>
-        <div class="col cohort mt-3">
-            <p class="text-light">COHORT: Jheesfri Cardona Hernandez</p>
-        </div>
-       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <script src="../archivos_JS/past_events.js"></script>
+    <script src="../archivos_JS/past_events.js"></script>
 </body>
 
 </html>
