organice los filtros que me fallaba el check cuando se quedaba con campo en text y los check en 0 me mostraba todo pero ya lo corregi y le di un mensje de error de busquedad mas dinamico y creativo

--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -107,7 +107,7 @@
             </div>
         </div>
         <!-- tarjetas o card de detalles de events -->
-        <div class="row d-flex justify-content-evenly align-items-start my-2" id="cont_cards">
+        <div class="d-flex justify-content-evenly flex-wrap flex-wrap my-2 " id="cont_cards">
             <!-- <div class="card" style="width: 18rem;">
                 <img src="/images/outing_to_the_museum.jpg" class="card-img-top" alt="museum">
                 <div class="card-body ">
