--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
             </div>
             <!-- tarjetas o card de detalles de events -->
             <div class="d-flex justify-content-evenly flex-wrap flex-wrap my-2 " id="cont_cards">
-
             </div>
         </div>
 
@@ -117,14 +116,11 @@
         <div class="fpadre row  align-items-center">
             <div class="fhijo col-5">
                 <a class="red_social" href="https://www.facebook.com/profile.php?id=61557393724458">
-                    <img src="/images/facebook.png" alt="facebook">
-                </a>
+                    <img src="/images/facebook.png" alt="facebook"></a>
                 <a class="red_social" href="https://www.instagram.com">
-                    <img src="/images/instagram.png" alt="instagram">
-                </a>
+                    <img src="/images/instagram.png" alt="instagram"></a>
                 <a class="red_social" href="https://wa.me/+573333333333">
-                    <img src="/images/whatsapp.png" alt="whatsapp">
-                </a>
+                    <img src="/images/whatsapp.png" alt="whatsapp"> </a>
             </div>
             <div class="col cohort mt-3">
                 <div class="d-flex justify-content-end">
@@ -136,7 +132,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="../archivos_JS/index.js"></script>
+    <script src="/archivos_JS/index.js" type="module"></script>
+    <script src="/modulo/modulo.js" type="module"></script>
 </body>
 
 </html>
