--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -145,7 +145,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="../archivos_JS/upcoming_events.js"></script>
+    <script src="../archivos_JS/upcoming_events.js" type="module"></script>
+    <script src="/modulo/modulo.js" type="module"></script>
 </body>
 
 </html>
