hice unos pequeños cambios y practique ramas ya me toca mezclarlo para el sprint 4

--- a/stast.html
+++ b/stast.html
@@ -87,11 +87,11 @@
         </div>
 
         <!-- tabla de estadisticas -->
-        <div class="tabla d-flex flex-column justify-content-center align-items-center my-5">
-            <table>
+        <div class="tabla d-flex flex-column justify-content-center align-items-center my-5 container">
+            <table class="table">
                 <thead>
                     <tr>
-                        <th class="tittle_table text-center bg-dark bg-gradient tituloTable" colspan="3">Events Statistics</th>
+                        <th class="tittle_table text-center bg-dark bg-gradient tituloTable" colspan="3" style="color: white;">Events Statistics</th>
                     </tr>
                     <tr>
                         <th>Events with highest % of assistance</th>
@@ -107,10 +107,10 @@
                     </tr>
                 </tbody>
             </table>
-            <table>
+            <table class="table">
                 <thead>
                     <tr>
-                        <th class="tittle_table bg-dark bg-gradient text-center tituloTable" colspan="3">Upcoming events statistics by category</th>
+                        <th class="tittle_table bg-dark bg-gradient text-center tituloTable" colspan="3" style="color: white;">Upcoming events statistics by category</th>
                     </tr>
                     <tr>
                         <th>Categories</th>
@@ -122,10 +122,10 @@
                     <!-- aqui van las categorias d elos eventos upcoming events -->
                 </tbody>
             </table>
-            <table>
+            <table class="table">
                 <thead>
                     <tr>
-                        <th class="tittle_table text-center bg-dark bg-gradient tituloTable" colspan="3">Past events statistics by category</th>
+                        <th class="tittle_table text-center bg-dark bg-gradient tituloTable" colspan="3" style="color: white;">Past events statistics by category</th>
                     </tr>
                     <tr>
                         <th>Categories</th>
